@@ -589,15 +589,29 @@ void view_changed_cb(GnomeMDI *mdi, GtkHex *old_view) {
 	GnomeApp *app;
 	GtkWidget *shell, *item;
 	gint pos;
-	
+	gint group_item;
+
 	if(mdi->active_view == NULL)
 		return;
 
 	app = gnome_mdi_get_app_from_view(mdi->active_view);
 	
-	shell = gnome_app_find_menu_pos(app->menubar, _("Edit/Group Data As/"), &pos);
+	shell = gnome_app_find_menu_pos(app->menubar, _("_Edit/_Group Data As/"), &pos);
+
+	group_item = GTK_HEX(mdi->active_view)->group_type / 2;
+	switch(group_item) {
+	case 0:
+		shell = gnome_app_find_menu_pos(shell, _("_Bytes"), &pos);
+		break;
+	case 1:
+		shell = gnome_app_find_menu_pos(shell, _("_Words"), &pos);
+		break;
+	case 2:
+		shell = gnome_app_find_menu_pos(shell, _("_Longwords"), &pos);
+		break;
+	}
 	
-	item = g_list_nth(GTK_MENU_SHELL(shell)->children, GTK_HEX(mdi->active_view)->group_type / 2)->data;
+	item = g_list_nth(GTK_MENU_SHELL(shell)->children, pos - 1)->data;
 	
 	gtk_menu_shell_activate_item(GTK_MENU_SHELL(shell), item, TRUE);
 
